...
    
    // when this save buttons is pressed, all information will then be transfered to the database
    @IBAction func actionSubmit(_ sender : Any)
    {
        var actionItem : String=String()
        var actionTitle : String=String()
        let exitAction = UIAlertAction(title: "OK", style: .cancel, handler: nil)  // default action to exit out of native alerts.
        
        dump(options)
        if ((HomeSearchBar.text?.isEmpty)! || (WorkSearchBar.text?.isEmpty)! || (arrivaltime1.text?.isEmpty)! ||
            (arrivaltime2.text?.isEmpty)! ||
            (departtime1.text?.isEmpty)! ||
            (departtime2.text?.isEmpty)! ||
            (routeName.text?.isEmpty)!)  // error handling for if all fields were filled  out.
        {
            actionTitle = "Error!"
            actionItem = "You have not entered all required information."
            
            // Activate UIAlertController to display error
            let alert = UIAlertController(title: actionTitle, message: actionItem, preferredStyle: .alert)
            alert.addAction(exitAction)
            self.present(alert, animated: true, completion: nil)  // present error alert.
        }
        else {
            
            print(options.joined(separator: ", "))
            let driver = self.driverSetting.isOn
            let userID = Auth.auth().currentUser!.uid
            let routeInfo = ["userID": userID, "departureTime1": departtime1.text! as Any, "departureTime2": departtime2.text! as Any, "arrivalTime1" : arrivaltime1.text! as Any, "arrivalTime2" : arrivaltime2.text! as Any, "Days" :  options, "Longitudes": longitudeArray, "Latitudes": latitudeArray, "Driver": driver, "Name": self.routeName.text! as Any, "startAddress": self.HomeSearchBar.text! as A
            print (routeInfo)
            addRoute(routeInfo: routeInfo)
            actionTitle = "Success"
            actionItem = "Your route information has been saved"
            
            // Activate UIAlertController to display error
...
    
    URLSession.shared.dataTask(with: request) { (data, response, error) -> Void in
        if (error != nil){  // error handling responses.
            print ("An error has occured.")
        }
        else{
            print ("Success!")
        }
        
        }.resume()
}

extension FrequentDestinationsViewController: UISearchBarDelegate {
...
