...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        userMenuTableView.delegate = self
        userMenuTableView.dataSource = self
        userMenuTableView.accessibilityIdentifier = "sideMenuTableView"
        view.accessibilityIdentifier = "sideMenuTableView"

    }

    override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        let cell = userMenuTableView.dequeueReusableCell(withIdentifier: "menuCell")
...
